feat: quotes plugged in

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
 
-    <div ng-controller='mainCtrl' class="quote-box">{{username}}</div>
+    <div ng-controller='mainCtrl' class="quote-box">{{quote.quoteText}}{{quote.quoteAuthor}}</div>
     <div class="voice-box">Voice Pick</div>
 
     <!-- Including angular and ui-router then our javascript files. ORDER MATTERS -->
