--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 
     <div ng-controller='mainCtrl' class="quote-box">{{quote.quoteText}}{{quote.quoteAuthor}}</div>
-    <div class="voice-box">Voice Pick</div>
+    <div ng-controller='mainCtrl' class="voice-box">Voice Pick
+    <button ng-click="speak(quote.quoteText, voice)">Speak</button>
+    </div>
 
     <!-- Including angular and ui-router then our javascript files. ORDER MATTERS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.js"></script>
